# tree-sitter-txtar

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  Taskfile.yml  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: CI.yml
bindings/c/: tree-sitter-txtar.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_txtar/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTxtar/: txtar.h
bindings/swift/TreeSitterTxtarTests/: TreeSitterTxtarTests.swift
bindings/zig/: root.zig  test.zig
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basic.txt  content.txt  edge_cases.txt  file_content.txt  filenames.txt  newlines.txt  paths.txt  pseudo_markers.txt
